MP-14 Fix unwrapped fragment expression in sort_button

--- a/src/main/resources/static/css/scss/_components.scss
+++ b/src/main/resources/static/css/scss/_components.scss
@@ -73,7 +73,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        text-align: center;
         max-width: 100px;
+        min-width: 50px;
       }
     }
   }
